# owox

./: .dockerignore  .gitignore  CLAUDE.md  Cargo.toml  Dockerfile  LICENSE  README.ja.md  README.md  biome.json  compose.yaml  index.html  package-lock.json  package.json  tsconfig.json  uno.config.ts  vite.config.ts
.agents/: project.md
.agents/skills/util-genshijin/: SKILL.md
.claude/skills/_shared/: reference-order.md  request-user-input-policy.md
.claude/skills/docs-update-adr/: SKILL.md
.claude/skills/docs-update-architecture/: SKILL.md
.claude/skills/docs-update-glossary/: SKILL.md
.claude/skills/docs-update-integrations/: SKILL.md
.claude/skills/docs-update-patterns/: SKILL.md
.claude/skills/docs-update-plan/: SKILL.md
.claude/skills/docs-update-proposal/: SKILL.md
.claude/skills/docs-update-requirement/: SKILL.md
.claude/skills/docs-update-research/: SKILL.md
.claude/skills/docs-update-spec/: SKILL.md
.claude/skills/docs-update-team-guide/: SKILL.md
.claude/skills/docs-update-tech-stack/: SKILL.md
.claude/skills/docs-update-validation/: SKILL.md
.claude/skills/harness-create-skill/: SKILL.md
.claude/skills/harness-init/: SKILL.md
.claude/skills/harness-update-project/: SKILL.md
.claude/skills/harness-validation/: SKILL.md
.claude/skills/task-close/: SKILL.md
.claude/skills/task-discovery/: SKILL.md
.claude/skills/task-fix/: SKILL.md
.devcontainer/: Dockerfile  compose.yml  devcontainer.json
.github/workflows/: quality-gate.yml  release.yml
apps/server/: Cargo.toml
apps/server/src/: error.rs  lib.rs  main.rs  state.rs
apps/server/src/routes/: files.rs  git.rs  logs.rs  mod.rs  plugins.rs  projects.rs  terminal.rs  ws.rs
apps/server/tests/: routes.rs  terminal_ws.rs  workflow_smoke.rs
crates/owox-core/: Cargo.toml
crates/owox-core/src/: command.rs  db.rs  fs.rs  git.rs  http.rs  lib.rs  log_store.rs  plugin.rs  terminal.rs  workspace.rs  ws.rs
crates/owox-core/tests/: command_contract.rs  db_contract.rs  external_ai_cli_smoke.rs  fs_contract.rs  git_parsers.rs  git_repo_ops.rs  http_contract.rs  log_store_contract.rs  terminal_lifecycle.rs  workspace_boundary.rs  ws_contract.rs
docs/project/: architecture.md  index.md  tech-stack.md  validation.md
src/: main.tsx  styles.css
src/api/: client.ts  contracts.ts  http.ts
src/events/: store.ts
src/i18n/: index.ts
src/theme/: tokens.css
src/utils/: platform.ts  shortcuts.ts
tests/client/: api-client.test.ts  diff-parse.test.ts  event-store.test.ts  feedback-error-view.test.ts  files-language.test.ts  files-tree-model.test.ts  git-status-model.test.ts  git-token.test.ts  log-model.test.ts  plugins-api.test.ts  project-errors.test.ts  renderer-adapter.test.ts  shell-responsive.test.ts  terminal-session-model.test.ts  terminal-transport.test.ts  workspace-state.test.ts
(+348 files in other folders)
