[workspace]
members = [
  "apps/server",
  "crates/owox-core",
]
resolver = "2"

[workspace.package]
edition = "2024"
license = "UNLICENSED"
repository = "owox"

[workspace.dependencies]
anyhow = "1.0"
axum = { version = "0.8", features = ["ws"] }
futures = "0.3"
portable-pty = "0.9"
rmp-serde = "1.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "sqlite", "uuid", "chrono"] }
tempfile = "3.14"
thiserror = "2.0"
tokio = { version = "1.42", features = ["macros", "process", "rt-multi-thread", "signal", "sync", "io-util", "time"] }
tower = { version = "0.5", features = ["util"] }
tower-http = { version = "0.6", features = ["fs", "trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1.11", features = ["v4", "serde"] }

