[package]
name = "owox-core"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[dependencies]
rmp-serde.workspace = true
serde.workspace = true
serde_json.workspace = true
sqlx.workspace = true
thiserror.workspace = true
uuid.workspace = true

[dev-dependencies]
tempfile.workspace = true
tokio.workspace = true

