[package]
name = "owox-core"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[dependencies]
portable-pty.workspace = true
rmp-serde.workspace = true
serde.workspace = true
serde_json.workspace = true
sqlx.workspace = true
thiserror.workspace = true
tokio = { workspace = true, features = ["sync", "rt", "macros", "time"] }
uuid.workspace = true

[dev-dependencies]
tempfile.workspace = true
tokio.workspace = true

